--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -115,11 +115,11 @@ Deletes the 1st person in the results of the `find` command.
 
 ==== Clearing all specified tags : `erase`
 
-Clears all spcified tags from all contacts from Hallper. +
-Format: `erase CCA`
+Clears all specified tags from all persons from Hallper. +
+Format: `erase CCA...`
 
 ****
-* Erases the CCA specified for all associated contacts.
+* Erases the CCA specified for all associated persons.
 * The CCA specified must be an existing CCA.
 * Multiple CCAs can be specified at once.
 ****
@@ -127,31 +127,33 @@ Format: `erase CCA`
 Example:
 
 * `erase basketball` +
-Erases `basketball` from contacts associated with this CCA. +
+Erases `basketball` from persons associated with this CCA. +
 * `erase basketball netball` +
-Erases `basketball` and `netball` from contacts associated with these CCAs.
+Erases `basketball` and `netball` from persons associated with these CCAs.
 
 ==== Clearing specific entries : `clear`
 
 Clears specified entries from Hallper. +
-Format: `clear KEYWORD`
+Format: `clear KEYWORD...`
 
 ****
-* Clears contacts associated with KEYWORD.
+* Clears persons associated with KEYWORD.
 * KEYWORD refers to either a CCA or ROOM.
-* KEYWORD is case-sensitive.
+* Multiple KEYWORDS can be specified at once in any order.
 ****
 
 Example:
 
 * `clear basketball` +
-Clears all entries associated with CCA `basketball`.
+Clears all persons associated with CCA `basketball`.
 * `clear A123` +
-Clears all entries associated with room `A123`.
+Clears all persons associated with room `A123`.
+* `clear baseball C456` +
+Clears all persons associated with CCA `baseball` and room `C456`
 
 ==== Clearing all entries : `clear all`
 
-Clears all entries from Hallper. +
+Clears all persons from Hallper. +
 Format: `clear all`
 
 ****
@@ -161,7 +163,7 @@ Format: `clear all`
 Example:
 
 * `clear all` +
-Clears `all` entries in Hallper.
+Clears `all` persons in Hallper.
 
 ==== Importing contact information : `import`
 
@@ -174,6 +176,15 @@ Format: `import f/FILEPATH`
 * The file to be uploaded must be a *`.xml`* file.
 ****
 
+
+File formats for imported `.xml` files are as shown below.
+
+image::AddressBookExample.png[width="790"]
+_Figure 4.1.7.1: Contacts information `.xml` file format._
+
+image::CCAListExample.png[width="790"]
+_Figure 4.1.7.2: CCA list `.xml` file format._
+
 Example:
 
 * `import f/C://Users/Files/data.xml` +
@@ -182,11 +193,17 @@ Imports `data.xml` file to be read and for database to be updated accordingly.
 ==== Exporting contact information: `export`
 
 Exports file containing existing contact information in Hallper. +
-Formate: `export dst/PATH fn/FILENAME`
+Format: `export dst/PATH fn/FILENAME`
 
 ****
 * The file exported will be a *`.xml`* file.
 ****
+
+File format for exported `.xml` file is as shown below.
+
+image::AddressBookExample.png[width="790"]
+_Figure 4.1.8.1: Contacts information `.xml` file format._
+
 
 Example:
 
@@ -491,6 +508,7 @@ e.g. `erase basketball`
 e.g. `clear basketball A123`
 * *Clear all* : `clear all`
 * *Import* : `import f/FILEPATH`
+* *Export* : `export dst/PATH fn/FILENAME`
 * *Image* : `image`
 * *Search* : `search KEYWORD [MORE_KEYWORDS]` +
 e.g. `search basketball A123`
