--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -111,9 +111,9 @@ Edits the phone number and e-mail address of the 1st patient in the list to `912
 * `edit 2 n/Betsy Crowe t/` +
 Edits the name of the 2nd patient in the list to `Betsy Crowe` and clears all her existing tags.
 
-==== Locating patients by name: `find`
+==== Locating a patient by name: `find`
 
-Finds patients whose names contain any of the given keywords. +
+Finds a patient whose name contains any of the given keywords. +
 Alias: `f` +
 Format: `find KEYWORD [MORE_KEYWORDS]`
 
@@ -143,9 +143,7 @@ Alias: `d` +
 Format: `delete INDEX`
 
 ****
-* Deletes the patient at the specified `INDEX`.
-* The index refers to the index number shown in the displayed patient list.
-* The index *must be a positive integer* 1, 2, 3, ...
+* Deletes the patient at the specified `INDEX`. The index refers to the index number shown in the displayed patient list. The index *must be a positive integer* (i.e. 1, 2, 3, ...).
 ****
 
 Examples:
@@ -155,17 +153,16 @@ Examples:
 Deletes the 2nd patient in the database.
 * `find Betsy` +
 `delete 1` +
-Deletes the 1st patient in the results of the `find` command.
+Deletes the 1st patient in the resulting list of the `find` command.
 
 ==== Selecting a patient: `select`
 
-Selects the patient identified by the index number used in the displayed patient list. +
+Selects a patient to view his profile. +
 Alias: `s` +
 Format: `select INDEX`
 
 ****
-* The index refers to the index number shown in the displayed patient list.
-* The index *must be a positive integer* (i.e. 1, 2, 3, ...).
+* Selects the patient at the specified `INDEX`. The index refers to the index number shown in the displayed patient list. The index *must be a positive integer* (i.e. 1, 2, 3, ...).
 ****
 
 Examples:
@@ -177,19 +174,26 @@ Selects the 2nd patient in the whole database.
 `select 1` +
 Selects the 1st patient in the resulting list of the `find` command.
 
-==== Adding medical records of a patient: `addMedicalRecord`
+==== Adding medical records to a patient: `addMedicalRecord`
 
-Updates a patient's medical record based on his NRIC or index number in the displayed patient list. +
+Updates the medical records of a patient. +
 Alias: `amr` +
 Format: `addMedicalRecord INDEX [b/BLOOD_TYPE] [d/PAST_DISEASE]... [da/DRUG_ALLERGY]... [m/NOTE]...` or +
-`addMedicalRecord NRIC [b/BLOOD_TYPE] [d/PAST_DISEASE]... [da/DRUG_ALLERGY]... [m/NOTE]...`
+`addMedicalRecord IC_NUMBER [b/BLOOD_TYPE] [d/PAST_DISEASE]... [da/DRUG_ALLERGY]... [m/NOTE]...`
+
+****
+* Updates the medical records of a patient based on his `IC_NUMBER` or the specified `INDEX`. The index refers to the index number shown in the displayed patient list. The index *must be a positive integer* (i.e. 1, 2, 3, ...).
+* At least one of the optional parameters must be provided.
+* Existing values will be updated with the newly input values of the corresponding field.
+* You can remove any of the patient's records by typing the prefixes `b/` `d/` `da/` `m/` without specifying any contents after the prefix.
+****
 
 Examples:
 
 * `addMedicalRecord 5 b/A+ da/Paracetamol d/Diabetes` +
 Adds 'Paracetamol' (under _Drug Allergy_) and 'Diabetes' (under _Past Disease_) to the 5th patient's medical record.
-* `aMR S94738123X b/B+` +
-Adds 'B+' (under _Blood Type_) to the medical record of the patient with that NRIC.
+* `addMedicalRecord S94738123X b/B+` +
+Adds 'B+' (under _Blood Type_) to the medical record of the patient with that IC number.
 // tag::patient[]
 
 // tag::medicine[]
@@ -208,20 +212,31 @@ Adds 'panadol' with _minimum stock quantity_ of '500' units, _price per unit_ of
 
 ==== Editing a medicine: `editMedicine`
 
-Edits the details of an existing medicine identified by the index number used in the displayed medicine list. +
+Edits the details of an existing medicine. +
 Alias: `em` +
 Format: `editMedicine INDEX [mn/MEDICINE_NAME] [msq/MINIMUM_STOCK_QUANTITY] [ppu/PRICE_PER_UNIT] [sn/SERIAL_NUMBER] [s/STOCK]`
+
+****
+* Edits the medicine details at the specified `INDEX`. The index refers to the index number shown in the displayed medicine list. The index *must be a positive integer* (i.e. 1, 2, 3, ...).
+* At least one of the optional parameters must be provided.
+* Existing values will be updated with the newly input values of the corresponding field.
+* You can remove any of the medicine details by typing the prefixes `msq/` `ppu/` `sn/` `s/` without specifying any contents after the prefix.
+****
 
 Example:
 
 * `editMedicine 1 n/hydrazine s/50022 p/20 min/30` +
 Edits the details of the medicine at index 1 in the displayed medicine list based on the new input parameters.
 
-==== Restock a medicine: `restock`
+==== Restocking a medicine: `restock`
 
-Restocks an existing medicine identified by the index number used in the displayed medicine list. +
+Restocks an existing medicine with *additional* quantity. +
 Alias: `rs` +
-Format: `restock index amt/AMOUNT`
+Format: `restock INDEX amt/AMOUNT`
+
+****
+* Restocks the medicine at the specified `INDEX`. The index refers to the index number shown in the displayed medicine list. The index *must be a positive integer* (i.e. 1, 2, 3, ...).
+****
 
 Example:
 
@@ -248,7 +263,7 @@ Finds the details of the medicine tagged with the serial number 1001.
 
 ==== Listing medicines that are low in supply: `checkStock`
 
-Lists all medicines that are low in stock. +
+Lists all medicines that are low in supply. +
 Alias: `cs` +
 Format: `checkStock`
 // tag::medicine[]
@@ -256,161 +271,196 @@ Format: `checkStock`
 // tag::pqms[]
 === Queue Management
 
-==== Listing all Patients in Patient Queue : `queue`
+==== Registering a patient to Waiting queue: `register`
 
-Lists all patients in queue waiting to see the doctor. +
-Alias: `q` +
-Format: `queue`
-
-==== Registering Patient to Queue : `register`
-
-Registers a new patient that comes to the clinic. +
+Registers a patient to the back of the Waiting queue. +
 Alias: `reg` +
-Format: `register <INDEX>` or `register <IC Number> [coming soon]`
+Format: `register INDEX` or `register IC_NUMBER [coming soon]`
+
+****
+* Registers the patient at the specified `INDEX`. The index refers to the index number shown in the displayed patient list. The index *must be a positive integer* (i.e. 1, 2, 3, ...).
+****
 
 Example:
 
-* `register 3` +
-Register the patient into the 3rd index.
+* `list` +
+`register 3` +
+Registers the 3rd patient in the database.
+* `find david` +
+`register 1` +
+Registers the 1st patient in the resulting list of the `find` command.
 
-==== Removing a patient from queue : `remove`
+==== Listing all patients in Waiting queue: `queue`
 
-Removes someone from the queue if he/she leaves before being served. +
+Lists all patients in the Waiting queue. +
+Alias: `q` +
+Format: `queue`
+
+==== Removing a patient from Waiting queue: `remove`
+
+Removes a patient from the Waiting queue if he leaves before being served. +
 Alias: `rem` +
-Format: `remove <INDEX>` or `remove <IC Number> [coming soon]`
+Format: `remove INDEX` or `remove IC_NUMBER [coming soon]`
+
+****
+* Removes the patient at the specified `INDEX`. The index refers to the index number shown in the displayed patient list. The `INDEX` *must be a positive integer* (i.e. 1, 2, 3, ...).
+****
 
 Examples:
 
 * `remove 5` +
-Remove the 5th patient in the queue.
+Removes the 5th patient in the queue.
 * `remove S9382839X` +
-Remove patient with IC Number S9382839X from the queue.
+Removes patient with IC number S9382839X from the queue.
 
-==== Inserting a patient to queue : `insert`
+==== Inserting a patient to Waiting queue: `insert`
 
-Inserts a patient at specified position in the queue. +
+Inserts a patient into the specified position in the Waiting queue. +
 Alias: `ins` +
-Format: `insert <INDEX> p/<POSITION>` or `insert <IC Number> p/<POSITION> [coming soon]`
+Format: `insert INDEX p/POSITION` or `insert IC_NUMBER p/POSITION [coming soon]`
+
+****
+* Inserts the patient at the specified `INDEX` in the displayed patient list into the specified `POSITION` in the Waiting queue. Both the index and position *must be a positive integer* (i.e. 1, 2, 3, ...).
+****
 
 Examples:
 
-* `insert 4 p/5` +
-Insert the 4th person of the address book into the 5th index of the queue.
+* `list` +
+`insert 4 p/5` +
+Inserts the 4th patient in the database into the 5th position in the queue.
 * `insert S9123456A p/5` +
-Insert the patient with that IC number to the 5th index of the queue.
+Inserts the patient with IC number S9123456A into the 5th position in the queue.
 
 
-==== Serving the first patient in the queue : `serve`
+==== Serving the first patient in Waiting queue: `serve`
 
-Serves the patient first in queue. +
+Serves the first patient in the Waiting queue. The patient being served is the Current Patient. +
 Alias: `ser` +
 Format: `serve`
 
-==== Adding documents to Current Patient : `docAdd`
+==== Adding document contents to Current Patient: `docAdd`
 
-Add documents to the Current Patient +
+Adds document contents to the Current Patient. +
 Alias: `da` +
-Format: `docAdd [mc/<MC>] [n/<NOTE>] [r/<REFERRAL>]`
+Format: `docAdd [mc/MC_DAYS] [n/NOTES] [r/REFERRAL]`
 
 ****
-* At least one of the optional fields must be provided.
-* Existing values will be updated to the input values.
-* You can remove any of the patient’s documents by typing prefix/ without specifying any document after it.
+* At least one of the optional parameters must be provided.
+* Existing values will be updated with the newly input values of the corresponding field.
+* You can remove any of the patient's document contents by typing the prefixes `mc/` `n/` `r/` without specifying any contents after the prefix.
 ****
 
 Examples
 
-* `docAdd mc/3 days n/fever`
-* `docAdd r/Ng Teng Fong Hospital`
+* `docAdd mc/3 n/This patient complains of headache for the past 3 days` +
+Adds MC duration and notes to the Current Patient.
+* `docAdd r/Ng Teng Fong Hospital` +
+Adds referral to the Current Patient.
 
-==== Dispensing Medicine to Current Patient : `dispenseMedicine`
+==== Dispensing medicine to Current Patient: `dispenseMedicine`
 
-Add medicine to the Current Patient +
+Dispenses the specified quantity of medicine to the Current Patient. +
 Alias: `dm` +
-Format `dispenseMedicine <INDEX> amt/<AMOUNT`
+Format `dispenseMedicine MEDICINE_INDEX amt/AMOUNT`
+
+****
+* Dispenses medicine at the specified `MEDICINE_INDEX` to the Current Patient. The index refers to the index number shown in the displayed medicine list. The index *must be a positive integer* (i.e. 1, 2, 3, ...).
+****
 
 Examples:
 
-*`dispenseMedicine 1 amt/10` +
-*`dispenseMedicine 5 amt/2`
+* `dispenseMedicine 1 amt/10` +
+10 units of the 1st medicine in the displayed medicine list will be added to the Current Patient. +
+* `dispenseMedicine 5 amt/2` +
+2 units of the 5th medicine in the displayed medicine list will be added to the Current Patient.
 
-==== Finish serving the Current Patient : `finish`
+==== Finishing service of the Current Patient: `finish`
 
-Transfers the current patient to the Served Patient Queue. +
+Transfers the Current Patient to the Served Patient queue. +
 Format: `finish`
 
 [NOTE]
 ====
-This command cannot be called if no note has been added to the patient. Use `docAdd` command to add notes.
+This command cannot be called if no notes have been added to the patient. Use `docAdd` command with prefix `n/` to add `NOTES`.
 ====
 
-==== Removing patient from served patient list : `payment`
+==== Removing patient from Served Patient queue: `payment`
 
-Removes a patient from the served patient list when the patient completes payment. +
+Removes a patient from the Served Patient queue when the patient completes payment. +
 Alias: `pay` +
-Format: `payment <INDEX>`
+Format: `payment INDEX`
+
+****
+* Removes the patient at the specified `INDEX`. The index refers to the index number shown in the Served Patient queue. The index *must be a positive integer* (i.e. 1, 2, 3, ...).
+****
 
 Examples:
 
 * `payment 3` +
-Removes the third patient from the list.
+Removes the 3rd patient from the queue.
 * `payment 1` +
-Removes the first patient from the list.
+Removes the 1st patient from the queue.
 
 // end::pqms[]
 
 // tag::document[]
 === Document Generation
 
-==== Generating Medical Certificate : `mc`
+==== Generating medical certificate: `mc`
 
-Generates a Medical Certificate based on the IC Number or Index Number from the last list/find command. +
-Format: `mc <INDEX> d/<DATE>-<DATE>` or `mc <IC Number> d/<DATE>-<DATE>` where date is in the format DD-MM-YYYY
+Generates medical certificate for a Served Patient. +
+Format: `mc INDEX`
+
+****
+* Generates a medical certificate for the patient at the specified `INDEX`. The index refers to the index number shown in the Served Patient queue. The index *must be a positive integer* (i.e. 1, 2, 3, ...).
+****
 
 Examples:
 
-* `mc 1 d/02-09-2018-04-09-2018` +
-Generates a MC for the 1st patient in the address book.
-* `mc S7473920X d/02-09-2018-02-09-2018` +
-Generates a MC for the IC number.
+* `mc 1` +
+Generates a medical certificate for the 1st patient in the Served Patient queue.
 
-==== Generating Receipt : `receipt`
+==== Generating receipt: `receipt`
 
-Generates a receipt for the patient’s current visit based on Index Number in the Done List or IC Number. +
+Generates receipt for a Served Patient. +
 Alias: `rct` +
-Format: `receipt <INDEX>` or `receipt <IC Number>`
+Format: `receipt INDEX`
+
+****
+* Generates a receipt for the patient at the specified `INDEX`. The index refers to the index number shown in the Served Patient queue. The index *must be a positive integer* (i.e. 1, 2, 3, ...).
+****
 
 Examples:
 
 * `receipt 5` +
-Generates a receipt for the 5th patient in the address book.
-* `receipt S8847383L` +
-Generates a receipt for the patient with that IC number.
+Generates a receipt for the 5th patient in the Served Patient queue.
 
-==== Generating Referral Letter : `refer`
+==== Generating referral letter: `refer`
 
-Generates a Referral Letter for the patient based on the IC Number or Index Number from the last list/find command. +
-Alias: `ref` +
-Format: `refer <INDEX> h/<HOSPITAL> d/<DEPARTMENT> r/<REASON> n/<NOTES>` or `refer <IC Number> h/<HOSPITAL> d/<DEPARTMENT> r/<REASON> n/<NOTES>`
+Generates referral letter for a Served Patient. +
+Alias: `rl` +
+Format: `refer INDEX`
+
+****
+* Generates a referral letter for the patient at the specified `INDEX`. The index refers to the index number shown in the Served Patient queue. The index *must be a positive integer* (i.e. 1, 2, 3, ...).
+****
 
 Examples:
 
-* `refer 3 h/NUH d/Surgery r/Internal bleeding n/Patient complains heart is in pain` +
-Generates a referral letter for the 3rd patient in the address book with the following reason and notes.
-* `refer S7722742C h/SGH d/Emergency r/Internal bleeding n/Patient is dying` +
-Generates a referral letter for the patient of that IC number with the following reason and notes.
+* `refer 7` +
+Generates a receipt for the 7th patient in the Served Patient queue.
 // end::document[]
 
 // tag::misc[]
 === Miscellaneous
 
-==== Viewing help : `help`
+==== Viewing help: `help`
 
 Format: `help`
 
-==== Listing entered commands : `history`
+==== Listing entered commands: `history`
 
-Lists all the commands that you have entered in reverse chronological order. +
+Lists all the commands entered in reverse chronological order. +
 Alias: `h` +
 Format: `history`
 
@@ -420,7 +470,7 @@ Pressing the kbd:[&uarr;] and kbd:[&darr;] arrows will display the previous and 
 ====
 
 // tag::undoredo[]
-==== Undoing previous command : `undo`
+==== Undoing previous command: `undo`
 
 Restores the address book to the state before the previous _undoable_ command was executed. +
 Alias: `u` +
@@ -428,7 +478,8 @@ Format: `undo`
 
 [NOTE]
 ====
-Undoable commands: those commands that modify the address book's content (`add`, `delete`, `edit` and `deleteAll`).
+Undoable commands: those commands that modify the database's content (`add`, `delete`, `edit` and `deleteAll`).
+This includes all commands that change the `Patient` or `Medicine` class, and PQMS-related commands.
 ====
 
 Examples:
@@ -447,7 +498,10 @@ The `undo` command fails as there are no undoable commands executed previously.
 `undo` (reverses the `deleteAll` command) +
 `undo` (reverses the `delete 1` command) +
 
-==== Redoing the previously undone command : `redo`
+* `addMedicine mn/panadol msq/100 ppu/5 sn/00000001 s/2500` +
+`undo` (reverses the `addMedicine` command)
+
+==== Redoing the previously undone command: `redo`
 
 Reverses the most recent `undo` command. +
 Alias: `r` +
@@ -471,66 +525,87 @@ The `redo` command fails as there are no `undo` commands executed previously.
 `redo` (reapplies the `deleteAll` command) +
 // end::undoredo[]
 
-==== Exiting the program : `exit`
+==== Exiting the program: `exit`
 
 Exits the program. +
 Format: `exit`
 
 ==== Saving the data
 
-Address book data are saved in the hard disk automatically after any command that changes the data. +
+CLInic data are saved in the hard disk automatically after any command that changes the data. +
 There is no need to save manually.
-
-// tag::dataencryption[]
-==== Encrypting data files `[coming in v2.0]`
-
-_{explain how the user can enable/disable data encryption}_
-// end::dataencryption[]
 // end::misc[]
 
 == FAQ
 
-*Q*: How do I transfer my data to another Computer? +
-*A*: Install the app in the other computer and overwrite the empty data file it creates with the file that contains the data of your previous CLInic folder.
+*Q*: How do I transfer my data to another computer? +
+*A*: Install the application in the other computer and overwrite the empty data file it creates with the file that contains the data of your previous CLInic folder.
 
 == Command Summary
 
-* *Add* `add n/NAME p/PHONE_NUMBER e/EMAIL a/ADDRESS [t/TAG]...` +
-e.g. `add n/James Ho p/22224444 e/jamesho@example.com a/123, Clementi Rd, 1234665 t/friend t/colleague`
-* *List* : `list`
-* *Edit* : `edit INDEX [n/NAME] [p/PHONE_NUMBER] [e/EMAIL] [a/ADDRESS] [t/TAG]...` +
-e.g. `edit 2 n/James Lee e/jameslee@example.com`
-* *Find* : `find KEYWORD [MORE_KEYWORDS]` +
-e.g. `find James Jake`
-* *Delete* : `delete INDEX` +
-e.g. `delete 3`
-* *Select* : `select INDEX` +
-e.g.`select 2`
-* *Add a medical record* : `addMedicalRecord <INDEX> <RELEVANT PARAMETERS>` +
-e.g. `addMedicalRecord 5 b/A+ d/Paracetamol p/Diabetes`
-* *Add a medicine* : `addMedicine sn/<SERIAL NUMBER> n/<NAME> s/<CURRENT STOCK> p/<PRICE PER PIECE> min/<MINIMUM STOCK QUANTITY>` +
-e.g. `addMedicine sn/1000 n/panadol s/500 p/0.50 min/50`
-* *List medicine stock* : `listStock`
-* *Find medicine stock* : `findStock <SERIAL NUMBER>` +
-e.g. `findStock 1001`
-* *Check medicine stock* : `checkStock`
-* *Display queue* : `queue`
-* *Register patient to queue* : `register <INDEX>` +
-e.g. `register 3`
-* *Remove patient from queue* : `remove <INDEX>` +
-e.g. `remove 2`
-* *Insert patient to queue* : `insert <INDEX> <POSITION>` +
-e.g. `insert 4 5`
-* *Serve patient* : `serve`
-* *Finish serving patient* : `finish`
-* *Generate MC* : `mc <INDEX> d/<DATE>-<DATE>` +
-e.g. `mc 1 d/02-09-2018-04-09-2018`
-* *Generate receipt* : `receipt INDEX` +
-e.g. `receipt 5`
-* *Generate referral letter* : `refer <INDEX> h/<HOSPITAL> d/<DEPARTMENT> r/<REASON> n/<NOTES>` +
-e.g. `refer 3 h/NUH d/Surgery r/Internal bleeding n/Patient complains heart is in pain`
-* *Help* : `help`
-* *History* : `history`
-* *Undo* : `undo`
-* *Redo* : `redo`
-* *Exit* : `exit`
+=== Patient
+
+[width="59%",cols="5%,<2%,<50%,<42%",options="header",]
+|=======================================================================
+|Commands Words |Commands Alias |Format|Example
+|Add |`a`  |`add n/NAME ic/IC_NUMBER p/PHONE_NUMBER e/EMAIL a/ADDRESS [t/TAG]…​` |`add n/John Doe p/98765432 e/johnd@example.com a/John Street, block 123, #01-01`
+|List |`l`  | `list` |`list`
+|Edit |`e`  |`edit INDEX [n/NAME] [p/PHONE] [e/EMAIL] [a/ADDRESS] [t/TAG]…​` |`edit 1 p/91234567 e/johndoe@example.com`
+|Find |`f`  |`find KEYWORD [MORE_KEYWORDS]​` |`find Betsy Tim John`
+|Delete |`d`  |`delete INDEX` |`delete 2`
+|Select |`s`  |`select INDEX` |`select 3`
+|addMedicalRecord |`amr`  |`addMedicalRecord INDEX [b/BLOOD_TYPE] [d/PAST_DISEASE]…​ [da/DRUG_ALLERGY]…​ [m/NOTE]…`​ or +
+                            `addMedicalRecord IC_NUMBER [b/BLOOD_TYPE] [d/PAST_DISEASE]…​ [da/DRUG_ALLERGY]…​ [m/NOTE]…​​` |`addMedicalRecord 5 b/A+ da/Paracetamol d/Diabetes` or +
+                            `addMedicalRecord S94738123X b/B+`
+|=======================================================================
+
+=== Medicine
+
+[width="59%",cols="5%,<2%,<50%,<42%",options="header",]
+|=======================================================================
+|Commands Words |Commands Alias |Format|Example
+|addMedicine |`am`  |`​addMedicine mn/MEDICINE_NAME msq/MINIMUM_STOCK_QUANTITY ppu/PRICE_PER_UNIT sn/SERIAL_NUMBER s/STOCK` |`addMedicine mn/panadol msq/500 ppu/0.50 sn/1234 s/1000`
+|editMedicine |`em`  | `editMedicine INDEX [mn/MEDICINE_NAME] [msq/MINIMUM_STOCK_QUANTITY] [ppu/PRICE_PER_UNIT] [sn/SERIAL_NUMBER] [s/STOCK]` |`editMedicine 1 n/hydrazine s/50022 p/20 min/30`
+|restock |`rs`  |`restock INDEX amt/AMOUNT` |`restock 2 amt/123`
+|listStock |`ls`  |`listStock` |`listStock`
+|findStock |`fs`  |`findStock SERIAL_NUMBER` |`findStock 1001`
+|checkStock |`cs`  |`checkStock` |`checkStock`
+|=======================================================================
+
+=== Queue Management
+
+[width="59%",cols="5%,<2%,<50%,<42%",options="header",]
+|=======================================================================
+|Commands Words |Commands Alias |Format|Example
+|register |`reg`  |`register INDEX​` |`register 1`
+|queue |`q`  | `queue` |`queue`
+|remove |`rem`  |`remove INDEX` |`remove 2`
+|insert |`ins`  |`insert INDEX p/POSITION` |`insert 3 p/4`
+|serve |`ser`  |`serve` |`serve`
+|docAdd |`da`  |`docAdd [mc/MC_DAYS] [n/NOTES] [r/REFERRAL]` |`docAdd mc/3 n/This patient complains of headache for the past 3 days`
+|dispenseMedicine |`dm`  |`dispenseMedicine MEDICINE_INDEX amt/AMOUNT` |`dispenseMedicine 5 amt/10`
+|finish |- |`finish` |`finish`
+|payment |`pay`  |`payment INDEX` |`payment 6`
+|=======================================================================
+
+=== Document Generation
+
+[width="59%",cols="5%,<2%,<50%,<42%",options="header",]
+|=======================================================================
+|Commands Words |Commands Alias |Format|Example
+|mc |-  |`mc INDEX​` |`mc 1`
+|receipt |`rec`  | `receipt INDEX` |`receipt 2`
+|refer |`ref`  |`refer INDEX` |`refer 3`
+|=======================================================================
+
+=== Miscellaneous
+
+[width="59%",cols="5%,<2%,<50%,<42%",options="header",]
+|=======================================================================
+|Commands Words |Commands Alias |Format|Example
+|help |-  |`help​` |`help`
+|history |`h`  | `history` |`history`
+|undo |`u`  |`undo` |`undo`
+|redo |`r`  |`redo` |`redo`
+|exit |-  |`exit` |`exit`
+|=======================================================================
