Add PPP for blewjy

--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -165,6 +165,7 @@ Selects the 2nd patient in the database.
 `select 1` +
 Selects the 1st patient in the results of the `find` command.
 
+// tag::addmedicalrecordcommand[]
 ==== Adding medical records of a patient : `addMedicalRecord`
 
 Adds a medical record for the patient based on the Index Number or IC Number from the last list/find command using any/all of the parameters. +
@@ -177,6 +178,7 @@ Examples:
 Adds Paracetamol and Diabetes to the 5th patient details.
 * `aMR S94738123X b/B+` +
 Adds blood type of the patient with that IC Number.
+// end::addmedicalrecordcommand[]
 
 === Medicine
 
