--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -18,12 +18,20 @@ By: `CS2103-AY1819S1-W14-2`      Since: `Sep 2018`      Licence: `MIT`
 
 == Introduction
 
-ThanePark is for those who *prefer to use a desktop app for managing the rides in
-your theme park!*. More importantly, ThanePark is *optimized for those who prefer
-to work with a Command Line Interface* (CLI) while still having the benefits of a
-Graphical User Interface (GUI). If you can type fast, ThanePark can get your
-ride information faster than traditional GUI apps. Interested? Jump
-to the <<Quick Start>> to get started. Enjoy!
+Welcome to ThanePark!
+ThanePark is a theme park management application that assists theme park managers and operators in obtaining ride information readily.
+Using the keyboard, you can easily access features such as creating rides, updating ride information, finding rides with short waiting time and more.
+
+Get started now by heading over to <<Quick Start>>. Enjoy!
+
+== About
+
+This user guide introduces you to ThanePark, provides detailed instructions to set up and gives you an overview of the available features.
+No prior technical knowledge is required to use ThanePark.
+
+For frequently asked questions, check out <<FAQ>>.
+
+For a brief summary of all features, check out <<Command Summary>>.
 
 == Quick Start
 
@@ -82,7 +90,7 @@ Format: `help [option]`
 Displays a full list of important commands with a more detailed description if more is supplied as an `option`. If a specific command is supplied as `option`, show
 greater detail of the specified command. If invalid `option` is specified, will show default help message.
 
-==== History of previous commands: `history`
+==== Viewing history of previous commands: `history`
 
 Display previous commands during this session. Inputted
 commands from the past are logged into the system. +
@@ -133,7 +141,7 @@ The `redo` command fails as there are no `undo` commands executed previously.
 `redo` (reapplies the `clear` command) +
 // end::undoredo[]
 
-==== Autocomplete/Suggest: `{tab}`
+==== Suggesting commands: `{tab}`
 
 Non-tech savvy users wouldn’t need to remember commands and can
 just use `tab` s to complete their sentences, or get suggestions on what
@@ -145,16 +153,17 @@ Format: `{tab}`
 Clears all entries from the address book. +
 Format: `clear`
 
-==== Exit: `exit`
+==== Exiting ThanePark: `exit`
 
 Exits the ThanePark application. +
 Format: `exit`
+
 
 === Manage input/output of attractions
 
 This section contains all commands related to managing attractions.
 
-==== Add attractions: `add`
+==== Adding attractions: `add`
 
 Add an attraction by name with the information. +
 Format: ``add `<attraction>` `<maintenance>` `<waitTime>` `<address>` [tag(s)]``
@@ -166,7 +175,7 @@ Examples:
 * add n/Transformers m/1 w/30 a/John street, block 123, #01-01
 * add n/The Mummy m/3 w/45 a/311, Clementi Ave 2, #02-25 t/3D t/indoor
 
-==== Delete attractions: `delete`
+==== Deleting attractions: `delete`
 
 Deletes the specified attraction from the ThanePark. +
 Format: `delete <index>`
@@ -187,22 +196,23 @@ Examples:
    `delete 1` +
    Deletes the 1st ride in the results of the find command.
 
-==== Update information of attraction: `update`
+==== Updating information of attraction: `update`
 
 Updates the information `<tag>` with `<value>` about the ride with `<name>`. +
-Format: `update <attraction> <tag> <value>`
+Format: `update <index> <tag> <value>`
 
-==== Shutdown attraction: `shutdown`
+==== Shutting down attraction: `shutdown`
 
 Close the ride for the day. Display statistics for the ride on that day. +
-Format: `shutdown <attraction>`
+Format: `shutdown <index>`
 
-==== Open attraction: `open`
+==== Opening attraction: `open`
 
 Open the ride for the day. Display statistics for the ride on that day. +
-Format: `open <attraction>`
+Format: `open <index>`
 
-=== View the list of rides
+
+=== View information on the list of rides
 
 This section contains all commands related to viewing list on rides.
 
@@ -211,23 +221,30 @@ This section contains all commands related to viewing list on rides.
 Display all available rides in a list. +
 Format: `viewall`
 
-==== View detailed information of a specific ride: `view`
+==== Viewing detailed information of a specific ride: `view`
 
 Display all available information about a single ride on the list of displayed rides.
 `index` field specifies the index of the ride that the user wants to view. +
 Format: `view <index>`
 
-==== View rides according to their status: `viewstatus`
+[NOTE]
+Index should not be greater than two billion.
+
+
+==== Viewing rides by their status: `viewstatus`
 
 Display all rides according to the status of the rides. +
-Format: `viewstatus [status]`
+Format: `viewstatus <status>`
+
+[NOTE]
+There are only three statuses that can be used in the status field, namely open, shutdown and maintenance.
 
 
-=== Filter the list of rides
+=== Find the relevant list of rides
 
-This section contains all commands related to filtering and finding rides.
+This section contains all commands related to finding rides that is relevant to you.
 
-==== Filter: `filter`
+==== Finding rides that fits the given condition: `filter`
 
 Display all rides that fits the condition in a table. +
 Can only filter conditions that have numeric values i.e. Maintenance and WaitTime +
@@ -238,8 +255,7 @@ Example:
 * `filter w/ < 500 w/ > 50` +
 Filters attractions with waiting time less than 500 and more than 50 minutes.
 
-
-==== Find a particular attraction: `find`
+==== Finding a particular attraction: `find`
 
 Find the rides that the user needs to check on. Case insensitive. +
 Can only find the name, the address, and the tags of the attractions. +
@@ -253,10 +269,12 @@ Finds and displays the list of attractions in ThanePark with the name "accelerat
 * `find a/ street` +
 Finds and displays the list of attractions with addresses that contain the word "street".
 
+
 == FAQ
 
 *Q*: How do I transfer my data to another Computer? +
 *A*: Install the app in the other computer and overwrite the empty data file it creates with the file that contains the data of your previous ThanePark folder.
+
 
 == Command Summary
 
