--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -255,7 +255,7 @@ The "by-name-commands" depend on the following operation/classes:
 
 * `PersonFinderUtil#findPerson(Model model, String personIdentifier)` -- Finds and returns the person that is uniquely identified by the `personIdentifier` in the `Model` provided.
 * `NameContainsAllKeywordsPredicate` -- Tests as true when a person's name matches all the keywords in the command's arguments.
-** The `findPerson` method makes use of the `NameContainsAllKeywordsPredicate`, which is in contrast to the `NameContainsKeywordsPredicate` used in the `FindCommand`.
+** The `PersonFinderUtil#findPerson` method makes use of the `NameContainsAllKeywordsPredicate`, which is in contrast to the `NameContainsKeywordsPredicate` used in the `FindCommand`.
 ** When editing by name, we need a more specific filter, rather than a general one. Instead of finding a Person that contains at least one identifier term in their name, the Person found must contain *all* identifier terms in their name.
 
 Note: in the following section, the shorthand format `_ByNameCommand` and `_Command` when used in the same context will refer to a similar type of command, e.g. `DeleteByNameCommand` and `DeleteCommand`, but `__` is general to refer to either `Delete` or `Edit`.
