--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -258,7 +258,7 @@ The "by-name-commands" depend on the following operation/classes:
 ** The `PersonFinderUtil#findPerson` method makes use of the `NameContainsAllKeywordsPredicate`, which is in contrast to the `NameContainsKeywordsPredicate` used in the `FindCommand`.
 ** When editing by name, we need a more specific filter, rather than a general one. Instead of finding a Person that contains at least one identifier term in their name, the Person found must contain *all* identifier terms in their name.
 
-Note: in the following section, the shorthand format `_ByNameCommand` and `_Command` when used in the same context will refer to a similar type of command, e.g. `DeleteByNameCommand` and `DeleteCommand`, but `__` is general to refer to either `Delete` or `Edit`.
+Note: in the following section, the shorthand format `\_ByNameCommand` and `_Command` when used in the same context will refer to a similar type of command, e.g. `DeleteByNameCommand` and `DeleteCommand`, but `_` is general to refer to either `Delete` or `Edit`.
 
 ==== Design Considerations
 ===== Aspect: Whether a `_ByNameCommand` should Extend the Regular `_Command`
@@ -278,7 +278,7 @@ change many parts to add this additional feature. It also makes sense, because a
 * **Alternative 2:** Before creation of the command
 ** Additional details: The command will have a `Person`
 ** Pros: The command is deterministic, since it targets a unique Person.
-** Cons: Need to gain access to the model before the person can be found, which is not usually done by AddressBookParser; high level changes are necessary.
+** Cons: Need to gain access to the model before the person can be found, which is not usually done by `AddressBookParser`; high level changes are necessary.
 
 // tag::editByName[]
 ==== Edit By Name feature
